--- a/beepy_waiters/src/main/res/layout/activity_restaurant.xml
+++ b/beepy_waiters/src/main/res/layout/activity_restaurant.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".RestaurantActivity">
+    tools:visibility="invisible">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choisissez votre restaurant" />
-
-    <EditText
-        android:id="@+id/restaurant_input"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/restaurant_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text" />
+        android:layout_height="match_parent" />
 
     <Button
-        android:id="@+id/restaurant_submit"
+        android:id="@+id/restaurant_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="103dp"
+        android:layout_marginBottom="52dp"
+        android:visibility="invisible"
+        android:text="Selectionner" />
 
-</LinearLayout>
+</RelativeLayout>
