--- a/beepy_waiters/src/main/res/layout/table_element.xml
+++ b/beepy_waiters/src/main/res/layout/table_element.xml
@@ -7,8 +7,7 @@
         android:id="@+id/table_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/teal_200"
-        android:text="Là c'est un test"/>
+        android:textColor="@color/teal_200"/>
 
     <Button
         android:id="@+id/table_select"
