--- a/beepy/src/main/res/layout/activity_main.xml
+++ b/beepy/src/main/res/layout/activity_main.xml
@@ -18,20 +18,43 @@
 
     <Button
         android:id="@+id/main_button_waiter"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="35sp"
+        android:layout_marginHorizontal="30dp"
         android:text="Ask for Waiter" />
 
-    <Button
-        android:id="@+id/main_button_command"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Command" />
 
-    <Button
-        android:id="@+id/main_button_bill"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bill" />
+        android:text="Your bill:"
+        android:gravity="center"
+        android:layout_marginVertical="20dp"
+        android:layout_gravity="center_horizontal"
+        android:textSize="25sp"/>
+
+    <ScrollView
+        android:id="@+id/table_bill_scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="300dp">
+
+        <LinearLayout
+            android:id="@+id/food_order_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </LinearLayout>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/table_bill_total"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Total: 0.00"
+        android:textStyle="bold"
+        android:textColor="#AC0606"
+        android:gravity="center"
+        android:textSize="35sp"/>
 
 </LinearLayout>
