--- a/beepy_waiters/src/main/res/layout/activity_table.xml
+++ b/beepy_waiters/src/main/res/layout/activity_table.xml
@@ -10,6 +10,87 @@
         android:id="@+id/table_answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Répondre à l'appel" />
+        android:layout_gravity="center"
+        android:text="Répondre à l'appel"
+        android:textSize="25sp"
+        android:layout_marginVertical="40dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ordered items:"
+        android:gravity="center"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center_horizontal"
+        android:textSize="25sp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="40dp"
+        >
+
+        <EditText
+            android:id="@+id/food_order_create_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:inputType="text"
+            android:textSize="20sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
+            android:hint="Name"
+            android:layout_weight="40"
+            />
+
+        <EditText
+            android:id="@+id/food_order_create_price"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:inputType="numberDecimal"
+            android:textSize="20sp"
+            android:hint="Price in $"
+            android:layout_weight="40"
+            />
+
+        <ImageButton
+            android:id="@+id/food_order_create_button"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:src="@mipmap/food_order_add_icon_foreground"
+            android:layout_marginHorizontal="10dp"/>
+
+        <ImageButton
+            android:id="@+id/food_order_delete_all_button"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:src="@mipmap/food_order_delete_all_icon_foreground"
+            android:layout_marginHorizontal="10dp"/>
+
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/table_bill_scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="300dp">
+
+        <LinearLayout
+            android:id="@+id/food_order_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </LinearLayout>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/table_bill_total"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Total: 0.00"
+        android:textStyle="bold"
+        android:textColor="#AC0606"
+        android:gravity="center"
+        android:textSize="35sp"/>
+
 
 </LinearLayout>
