--- a/beepy/src/main/res/layout/table_element.xml
+++ b/beepy/src/main/res/layout/table_element.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingBottom="20dp" >
 
     <TextView
         android:id="@+id/table_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/teal_200"/>
-
+        android:textAlignment="center"
+        android:textSize="18sp" />
     <Button
         android:id="@+id/table_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Selectionner" />
+        android:theme="@style/Beepy.button"
+        android:background="@drawable/rounded_button"
+        android:width="120dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginHorizontal="5dp"
+        android:layout_gravity="right"
+        android:textSize="13sp"
+        android:text="@string/select" />
 
-</LinearLayout>
+</RelativeLayout>
