--- a/beepy_waiters/src/main/res/layout/activity_main.xml
+++ b/beepy_waiters/src/main/res/layout/activity_main.xml
@@ -5,4 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" />
+    tools:context=".MainActivity" >
+
+    <TextView
+        android:id="@+id/table_restaurant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:theme="@style/Beepy.title" />
+
+    <LinearLayout
+        android:id="@+id/table_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:orientation="vertical" />
+</LinearLayout>
