--- a/beepy_waiters/src/main/res/layout/activity_restaurant.xml
+++ b/beepy_waiters/src/main/res/layout/activity_restaurant.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center_horizontal"
+    android:theme="@style/Theme.Beepy"
+    tools:context=".RestaurantActivity"
     tools:visibility="invisible">
 
     <androidx.fragment.app.FragmentContainerView
@@ -15,13 +19,13 @@
         android:id="@+id/restaurant_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="40dp"
+        android:theme="@style/Beepy.button"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/rounded_button"
         android:visibility="invisible"
-        android:text="Selectionner" />
+        android:text="@string/select" />
 
 </RelativeLayout>
