--- a/beepy_waiters/src/main/res/values/themes.xml
+++ b/beepy_waiters/src/main/res/values/themes.xml
@@ -1,8 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Beepy" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Delete the action bar -->
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowNoTitle">true</item>
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -12,5 +15,22 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:gravity">center_horizontal</item>
     </style>
+    <style name="Beepy.button" parent="Theme.Beepy">
+        <item name="android:textSize">18dp</item>
+        <item name="android:width">250dp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="Beepy.ChosingButton" parent="Theme.Beepy">
+        <item name="android:textSize">25dp</item>
+        <item name="android:width">340dp</item>
+        <item name="android:height">60dp</item>
+    </style>
+    <style name="Beepy.title" parent="Theme.Beepy">
+        <item name="android:textSize">30dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style><style name="Beepy.subtitle" parent="Theme.Beepy">
+    <item name="android:textSize">20dp</item>
+</style>
 </resources>
