--- a/beepy/src/main/res/layout/activity_main.xml
+++ b/beepy/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:id="@+id/main_button_waiter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ask for Waiter"
+        android:text="@string/ask_for_waiter"
         android:theme="@style/Beepy.ChosingButton"
         android:background="@drawable/rounded_button"
         android:layout_marginVertical="25dp" />
@@ -33,7 +33,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your bill:"
+        android:text="@string/your_bill"
         android:gravity="center"
         android:layout_marginVertical="20dp"
         android:layout_gravity="center_horizontal"
@@ -56,7 +56,7 @@
         android:id="@+id/table_bill_total"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Total: 0.00"
+        android:text="@string/bill_total"
         android:textStyle="bold"
         android:textColor="#AC0606"
         android:gravity="center"
