--- a/beepy/src/main/res/layout/food_order_element.xml
+++ b/beepy/src/main/res/layout/food_order_element.xml
@@ -11,7 +11,7 @@
         android:maxHeight="@android:dimen/app_icon_size"
         android:src="@mipmap/food_icon_foreground"
         android:layout_weight="2"
-        android:contentDescription="Useless but beautiful icon" />
+        android:contentDescription="@string/food_icon" />
 
     <TextView
         android:id="@+id/food_order_name"
@@ -19,7 +19,7 @@
         android:layout_height="60dp"
         android:textColor="@color/teal_200"
         android:textSize="20sp"
-        android:text="Nom du plat"
+        android:text="@string/food_name"
         android:layout_weight="70"
         android:gravity="center" />
 
@@ -29,7 +29,7 @@
         android:layout_height="60dp"
         android:textColor="@color/teal_200"
         android:textSize="20sp"
-        android:text="Prix"
+        android:text="@string/food_price"
         android:layout_weight="28"
         android:gravity="center" />
 
