--- a/beepy_waiters/src/main/res/layout/activity_table.xml
+++ b/beepy_waiters/src/main/res/layout/activity_table.xml
@@ -15,14 +15,14 @@
         android:layout_gravity="center"
         android:theme="@style/Theme.Beepy"
         android:background="@drawable/rounded_button"
-        android:text="Répondre à l'appel"
+        android:text="@string/waiter_answer_call"
         android:textSize="25sp"
         android:layout_marginVertical="40dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ordered items:"
+        android:text="@string/ordered_items"
         android:gravity="center"
         android:layout_marginBottom="20dp"
         android:layout_gravity="center_horizontal"
@@ -43,7 +43,7 @@
             android:textSize="20sp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
-            android:hint="Name"
+            android:hint="@string/food_name_hint"
             android:layout_weight="40"
             />
 
@@ -53,7 +53,7 @@
             android:layout_height="match_parent"
             android:inputType="numberDecimal"
             android:textSize="20sp"
-            android:hint="Price in $"
+            android:hint="@string/food_price_hint"
             android:layout_weight="40"
             />
 
@@ -90,7 +90,7 @@
         android:id="@+id/table_bill_total"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Total: 0.00"
+        android:text="@string/bill_total"
         android:textStyle="bold"
         android:textColor="#AC0606"
         android:gravity="center"
