--- a/beepy_waiters/src/main/res/layout/table_element.xml
+++ b/beepy_waiters/src/main/res/layout/table_element.xml
@@ -8,10 +8,10 @@
 
     <TextView
         android:id="@+id/table_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:layout_weight="60" />
     <Button
         android:id="@+id/table_select"
@@ -19,11 +19,10 @@
         android:layout_height="wrap_content"
         android:theme="@style/Beepy.button"
         android:background="@drawable/rounded_button"
-        android:layout_alignParentRight="true"
         android:width="120dp"
         android:height="5dp"
         android:layout_marginHorizontal="5dp"
-        android:textSize="13dp"
-        android:text="Sélectionner" />
+        android:textSize="13sp"
+        android:text="@string/table_select" />
 
 </LinearLayout>
